added second manifest and updated css and removed popup from manifest

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+    <div style="display:flex;">
+      <label for="hiding">Hiding</label>
+      <input type="checkbox" id="hiding" checked />
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
